<resources>
    <string name="app_name">EtsySearch</string>
    <string name="enter_a_search_to_begin">Search for something in the menu to begin</string>
    <string name="search">Search</string>
    <string name="minimum_price">Minimum Price</string>
    <string name="save">Save</string>
    <string name="price">Price:</string>
    <string name="search_filter">Search Filter</string>
    <string name="maxmium_price">Maxmium Price</string>
</resources>
